revert test use case about type cast